Index with Styles (sass), and translations

--- a/ambit verd/Resources/Layout.ca.resx
+++ b/ambit verd/Resources/Layout.ca.resx
@@ -117,13 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Contact" xml:space="preserve">
-    <value>Contacto</value>
+  <data name="Contacto" xml:space="preserve">
+    <value>Contacte</value>
   </data>
-  <data name="Home" xml:space="preserve">
-    <value>Inicio</value>
+  <data name="Inicio" xml:space="preserve">
+    <value>Inici</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>Ambit Verd</value>
+  </data>
+  <data name="Proyectos" xml:space="preserve">
+    <value>Projectes</value>
+  </data>
+  <data name="Quienes Somos" xml:space="preserve">
+    <value>Qui som?</value>
+  </data>
+  <data name="Servicios" xml:space="preserve">
+    <value>Serveis</value>
   </data>
 </root>
