--- a/ambit verd/Resources/Layout.ca.resx
+++ b/ambit verd/Resources/Layout.ca.resx
@@ -120,8 +120,23 @@
   <data name="Contacto" xml:space="preserve">
     <value>Contacte</value>
   </data>
+  <data name="footer0" xml:space="preserve">
+    <value>Pujar adalt</value>
+  </data>
+  <data name="footer1" xml:space="preserve">
+    <value>©Àmbit Verd Serveis Integrals de Jardineria S.L. · Puigcerdà · Tel 667 554 059 · info@ambitverd.com</value>
+  </data>
+  <data name="Index0" xml:space="preserve">
+    <value>Demana Informació</value>
+  </data>
   <data name="Inicio" xml:space="preserve">
     <value>Inici</value>
+  </data>
+  <data name="modal0" xml:space="preserve">
+    <value>Contacte: </value>
+  </data>
+  <data name="modal1" xml:space="preserve">
+    <value>Pot contactar amb nosaltres a través de:</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>Ambit Verd</value>
@@ -134,5 +149,155 @@
   </data>
   <data name="Servicios" xml:space="preserve">
     <value>Serveis</value>
+  </data>
+  <data name="Servicios0" xml:space="preserve">
+    <value>Serveis</value>
+  </data>
+  <data name="Servicios1" xml:space="preserve">
+    <value>Disseny de jardins</value>
+  </data>
+  <data name="Servicios10" xml:space="preserve">
+    <value>Il·luminació</value>
+  </data>
+  <data name="Servicios11" xml:space="preserve">
+    <value>Sistemes de reg</value>
+  </data>
+  <data name="Servicios12" xml:space="preserve">
+    <value>Manteniment de jardins</value>
+  </data>
+  <data name="Servicios13" xml:space="preserve">
+    <value>Realitzem tot tipus de manteniments en jardins i espais verds, tant en els projectats per nosaltres com en els ja existents.</value>
+  </data>
+  <data name="Servicios14" xml:space="preserve">
+    <value>Oferim contractes de manteniment que poden incloure diversos serveis en llargs espais de temps, o si ho prefereix pot contractar treballs concrets en el moment que ho necessiti.</value>
+  </data>
+  <data name="Servicios15" xml:space="preserve">
+    <value>Manteniment periòdic</value>
+  </data>
+  <data name="Servicios16" xml:space="preserve">
+    <value>Tall i manteniment específic de gespa</value>
+  </data>
+  <data name="Servicios17" xml:space="preserve">
+    <value>Abonats</value>
+  </data>
+  <data name="Servicios18" xml:space="preserve">
+    <value>Tractaments fitosanitaris per insectes, plagues o fongs</value>
+  </data>
+  <data name="Servicios19" xml:space="preserve">
+    <value>Aplicacions d'herbicides selectius per eliminar males herbes de fulla ampla</value>
+  </data>
+  <data name="Servicios2" xml:space="preserve">
+    <value>Dissenyem el seu jardí, tant adaptant les seves idees com suggerint projectes integrals de jardineria, tenint sempre en compte les seves necessitats.</value>
+  </data>
+  <data name="Servicios20" xml:space="preserve">
+    <value>Retallades i podes d'arbres i arbustos</value>
+  </data>
+  <data name="Servicios21" xml:space="preserve">
+    <value>Ajustaments de el sistema de reg</value>
+  </data>
+  <data name="Servicios22" xml:space="preserve">
+    <value>Il·luminació</value>
+  </data>
+  <data name="Servicios23" xml:space="preserve">
+    <value>Treballs de manteniment puntual</value>
+  </data>
+  <data name="Servicios24" xml:space="preserve">
+    <value>Gespa amb cicatrius i ventilació</value>
+  </data>
+  <data name="Servicios25" xml:space="preserve">
+    <value>Podes d'arbres i arbustos</value>
+  </data>
+  <data name="Servicios26" xml:space="preserve">
+    <value>Resembrados</value>
+  </data>
+  <data name="Servicios27" xml:space="preserve">
+    <value>Abonats</value>
+  </data>
+  <data name="Servicios28" xml:space="preserve">
+    <value>Tractaments fitosanitaris</value>
+  </data>
+  <data name="Servicios29" xml:space="preserve">
+    <value>Manteniment de sistemes de reg</value>
+  </data>
+  <data name="Servicios3" xml:space="preserve">
+    <value>En Àmbit Verd treballem amb tot tipus de materials instal·lant els més adequats segons el projecte i el seu pressupost:</value>
+  </data>
+  <data name="Servicios30" xml:space="preserve">
+    <value>Sistemes de reg</value>
+  </data>
+  <data name="Servicios31" xml:space="preserve">
+    <value>En Àmbit Verd planifiquem i instal·lem sistemes de reg personalitzats i automatizadosque utilitzen l'aigua justa i necessària per a cada zona, adaptant-se a les característiques de cada jardí o zona verda. Així com el manteniment, adaptació i millora de sistemes de reg ja existents.</value>
+  </data>
+  <data name="Servicios32" xml:space="preserve">
+    <value>Els sistemes automatitzats de reg li estalviaran temps i responsabilitat, ja que per ells mateixos més el manteniment i supervisió d'Àmbit Verd s'ocuparan de tota la gestió de l'aigua, sobretot en superfícies extenses.</value>
+  </data>
+  <data name="Servicios33" xml:space="preserve">
+    <value>Subministrem i instal·lem tot el material:</value>
+  </data>
+  <data name="Servicios34" xml:space="preserve">
+    <value>Sistemes de control</value>
+  </data>
+  <data name="Servicios35" xml:space="preserve">
+    <value>Electrobombes per a pous i dipòsits.</value>
+  </data>
+  <data name="Servicios36" xml:space="preserve">
+    <value>Dipòsits enterrats i de superfície per acumulació d'aigües pluvials, sèquies i pous.</value>
+  </data>
+  <data name="Servicios37" xml:space="preserve">
+    <value>Sistemes intel·ligents per a l'estalvi d'aigua de reg, a força de sensors de pluja i humitat</value>
+  </data>
+  <data name="Servicios38" xml:space="preserve">
+    <value>Altres serveis.</value>
+  </data>
+  <data name="Servicios39" xml:space="preserve">
+    <value>Subministrament i col·locació de Llenya.</value>
+  </data>
+  <data name="Servicios4" xml:space="preserve">
+    <value>Mostra materials</value>
+  </data>
+  <data name="Servicios40" xml:space="preserve">
+    <value>Extracció de neu per a particulars i comunitats en els accessos als pàrquings i entrades per als vianants.</value>
+  </data>
+  <data name="Servicios41" xml:space="preserve">
+    <value>Neteja de pàrquings.</value>
+  </data>
+  <data name="Servicios42" xml:space="preserve">
+    <value>Manteniment d'enllumenats exteriors.</value>
+  </data>
+  <data name="Servicios43" xml:space="preserve">
+    <value>Encesa manual de calefaccions a les cases.</value>
+  </data>
+  <data name="Servicios5" xml:space="preserve">
+    <value>Sembrat de jardins</value>
+  </data>
+  <data name="Servicios6" xml:space="preserve">
+    <value>Plantes i arbres</value>
+  </data>
+  <data name="Servicios7" xml:space="preserve">
+    <value>Tanques</value>
+  </data>
+  <data name="Servicios8" xml:space="preserve">
+    <value>Jardineres</value>
+  </data>
+  <data name="Servicios9" xml:space="preserve">
+    <value>Elements decoratius</value>
+  </data>
+  <data name="WeAre1" xml:space="preserve">
+    <value />
+  </data>
+  <data name="WeAre2" xml:space="preserve">
+    <value />
+  </data>
+  <data name="WeAre3" xml:space="preserve">
+    <value />
+  </data>
+  <data name="WeAre4" xml:space="preserve">
+    <value />
+  </data>
+  <data name="WeAre5" xml:space="preserve">
+    <value />
+  </data>
+  <data name="WeAre6" xml:space="preserve">
+    <value />
   </data>
 </root>
