--- a/ambit verd/Resources/Layout.ca.resx
+++ b/ambit verd/Resources/Layout.ca.resx
@@ -283,21 +283,29 @@
     <value>Elements decoratius</value>
   </data>
   <data name="WeAre1" xml:space="preserve">
-    <value />
+    <value>Àmbit Verd és una empresa d'obres i serveis integrals de jardineria compromesos amb oferir als nostres clients i empreses les millors solucions a les seves necessitats en qualsevol aspecte relacionat amb jardins i espais verds.</value>
   </data>
   <data name="WeAre2" xml:space="preserve">
-    <value />
+    <value>Ubicats a Puigcerdà prestem els nostres serveis principalment a la zona de la Cerdanya catalana i francesa. En Àmbit Verd realitzem treballs de jardineria en qualsevol zona i terreny, prestant serveis a particulars, comunitats de veïns, empreses i organismes oficials.</value>
   </data>
   <data name="WeAre3" xml:space="preserve">
-    <value />
+    <value>Els nostres serveis ofereixen solucions integrals de jardineria en totes les àrees relacionades amb la jardineria, el paisatgisme i els espais verds, des del disseny i l'execució fins al manteniment.</value>
   </data>
   <data name="WeAre4" xml:space="preserve">
-    <value />
+    <value>El nostre objectiu</value>
   </data>
   <data name="WeAre5" xml:space="preserve">
-    <value />
+    <value>és proporcionar el client el disseny, assessorament i manteniment ideals, d'acord amb les seves necessitats i peticions amb les màximes garanties de qualitat i professionalitat.</value>
   </data>
   <data name="WeAre6" xml:space="preserve">
-    <value />
+    <value>La nostra satisfacció</value>
+  </data>
+  <data name="WeAre7" xml:space="preserve">
+    <value>és comprovar l'aprovació dels nostres clients després de la prestació de qualsevol dels nostres serveis, sigui un projecte integral o un petit manteniment.</value>
+  </data>
+  <data name="WeAre8" xml:space="preserve">
+    <value>Per aconseguir tot això Àmbit Verd compta amb un equip de treball qualificat, amb experiència i recolzat pels mitjans adequats per dur terme la seva feina. Per a nosaltres el factor humà és, com en qualsevol altra activitat, un aspecte essencial de la feina ben feta.
+
+         Si té qualsevol necessitat relacionada amb el món de la jardineria i el paisatgisme, us proposem que contacti amb nosaltres per poder assessorar i proposar-li la solució que millor s'adapti a les seves necessitats, ens encarregarem de tots els serveis contractats sense que s'hagi de preocupar de res .</value>
   </data>
 </root>
