--- a/ambit verd/Resources/Layout.fr.resx
+++ b/ambit verd/Resources/Layout.fr.resx
@@ -283,21 +283,29 @@
     <value>Éléments décoratifs</value>
   </data>
   <data name="WeAre1" xml:space="preserve">
-    <value />
+    <value>Àmbit Verd est une entreprise complète de travaux et de services de jardinage engagée à offrir à nos clients et entreprises les meilleures solutions à leurs besoins dans tous les aspects liés aux jardins et aux espaces verts.</value>
   </data>
   <data name="WeAre2" xml:space="preserve">
-    <value />
+    <value>Situé à Puigcerdà, nous fournissons nos services principalement dans la région catalane et française de la Cerdagne. Chez Àmbit Verd, nous réalisons des travaux de jardinage dans tous les domaines et terrains, en fournissant des services aux particuliers, aux communautés de quartier, aux entreprises et aux organismes officiels.</value>
   </data>
   <data name="WeAre3" xml:space="preserve">
-    <value />
+    <value>Nos services offrent des solutions de jardinage complètes dans tous les domaines liés au jardinage, à l'aménagement paysager et aux espaces verts, de la conception et l'exécution à la maintenance.</value>
   </data>
   <data name="WeAre4" xml:space="preserve">
-    <value />
+    <value>Notre objectif</value>
   </data>
   <data name="WeAre5" xml:space="preserve">
-    <value />
+    <value>est de fournir au client la conception, le conseil et la maintenance idéaux, en fonction de ses besoins et demandes avec les garanties maximales de qualité et de professionnalisme.</value>
   </data>
   <data name="WeAre6" xml:space="preserve">
-    <value />
+    <value>Notre satisfaction</value>
+  </data>
+  <data name="WeAre7" xml:space="preserve">
+    <value>est de vérifier l'agrément de nos clients après la fourniture de l'un de nos services, qu'il s'agisse d'un projet intégral ou d'un petit entretien.</value>
+  </data>
+  <data name="WeAre8" xml:space="preserve">
+    <value>Pour réaliser tout cela, Àmbit Verd dispose d'une équipe de travail qualifiée, expérimentée et soutenue par les moyens appropriés pour mener à bien ses travaux. Pour nous, le facteur humain est, comme dans toute autre activité, un aspect essentiel d'un travail bien fait.
+
+         Si vous avez un besoin lié au monde du jardinage et de l'aménagement paysager, nous vous suggérons de nous contacter pour vous conseiller et vous proposer la solution la mieux adaptée à vos besoins, nous nous occuperons de tous les services sous contrat sans que vous ayez à vous soucier de quoi que ce soit.</value>
   </data>
 </root>
