--- a/ambit verd/Resources/Layout.resx
+++ b/ambit verd/Resources/Layout.resx
@@ -286,21 +286,29 @@
     <value>Projects</value>
   </data>
   <data name="WeAre1" xml:space="preserve">
-    <value />
+    <value>Àmbit Verd es una empresa de obras y servicios integrales de jardinería comprometidos con ofrecer a nuestros clientes y empresas las mejores soluciones a sus necesidades en cualquier aspecto relacionado con jardines y espacios verdes.</value>
   </data>
   <data name="WeAre2" xml:space="preserve">
-    <value />
+    <value>Ubicados en Puigcerdà prestamos nuestros servicios principalmente en la zona de la Cerdaña catalana y francesa. En  Àmbit Verd realizamos trabajos de jardinería en cualquier zona y terreno, prestando servicios a particulares, comunidades de vecinos, empresas y organismos oficiales.</value>
   </data>
   <data name="WeAre3" xml:space="preserve">
-    <value />
+    <value>Nuestros servicios ofrecen soluciones integrales de jardinería en todas las áreas relacionadas con la jardinería, el paisajismo y los espacios verdes, desde el diseño y la ejecución hasta el mantenimiento.</value>
   </data>
   <data name="WeAre4" xml:space="preserve">
-    <value />
+    <value>Nuestro objetivo</value>
   </data>
   <data name="WeAre5" xml:space="preserve">
-    <value />
+    <value>es proporcionar al cliente el diseño, asesoramiento y mantenimiento ideales, de acuerdo con sus necesidades y peticiones con las máximas garantías de calidad y profesionalidad.</value>
   </data>
   <data name="WeAre6" xml:space="preserve">
-    <value />
+    <value>Nuestra satisfacción</value>
+  </data>
+  <data name="WeAre7" xml:space="preserve">
+    <value>es comprobar la aprobación de nuestros clientes tras la prestación de cualquiera de nuestros servicios, sea un proyecto integral o un pequeño mantenimiento.</value>
+  </data>
+  <data name="WeAre8" xml:space="preserve">
+    <value>Para conseguir todo esto Àmbit Verd cuenta con un equipo de trabajo cualificado, con experiencia y respaldado por los medios adecuados para llevar cabo su trabajo. Para nosotros el factor humano es, como en cualquier otra actividad, un aspecto esencial del trabajo bien hecho.
+
+        Si tiene cualquier necesidad relacionada con el mundo de la jardinería y el paisajismo, le proponemos que contacte con nosotros para poder asesorarle y proponerle la solución que mejor se adapte a sus necesidades, nos encargaremos de todos los servicios contratados sin que tenga que preocuparse de nada.</value>
   </data>
 </root>
